# Scrabble

./: .gitignore  .travis.yml  README.md  ScrabbleLangGrammar.txt  package.yaml  scrabble.cabal  stack.yaml
Haskell/: cabal.sandbox.config  scrabble.cabal  stack.yaml
Haskell/src/: Scrabble.hs
Haskell/src/Scrabble/: ArrayBoard.hs  Bag.hs  Board.hs  Game.hs  ListBoard.hs  Matrix.hs  Position.hs  Search.hs  Types.hs
Haskell/src/Scrabble/Commands/: AST.hs  Interpreter.hs  SExpr.hs
Haskell/test/: Main.hs  ScrabbleTests.hs
Haskell/test/UnitTests/: TestHelpers.hs
Scala/: build.sbt
Scala/src/main/java/scrabblej/: Bag.java  Game.java  Move.java  Pair.java  Player.java  PlayerType.java  Search.java  Tile.java
Scala/src/main/scala/scrabble/: Search.scala
Scala/src/test/scala/scrabble/: SearchTest.scala
Scala/src/test/scala/scrabblej/: JavaSearchProperties.scala
docs/: ScrabbleLangGrammar.txt
otherLanguages/Scala/src/main/java/scrabblej/: Hofs.java  Player.java  Search.java
otherLanguages/Scala/src/main/scala/scrabble/: Search.scala  Tile.scala
otherLanguages/Scala/src/test/scala/scrabble/: SearchProperties.scala
snap/: Main.hs
snap/Scrabble/Snap/: JSON.hs
src/: Scrabble.hs
src/Scrabble/: .Board.hs.swp  ArrayBoard.hs  Bag.hs  Board.hs  Dictionary.hs  Game.hs  ListBoard.hs  Matrix.hs  NonEmpty.hs  Play.hs  Position.hs  ReplHelpers.hs  Scrabble.hs  Search.hs  Square.hs  Tile.hs  Types.hs
src/Scrabble/Board/: ArrayBoard.hs  Board.hs  Orientation.hs  Point.hs  Square.hs
src/Scrabble/Commands/: AST.hs  Interpreter.hs  SExpr.hs
src/Scrabble/Move/: Move.hs  MoveHelpers.hs  Scoring.hs  Validation.hs  WordPut.hs
test/: Main.hs  ScrabbleArbitrary.hs  ScrabbleTests.hs  SearchTests.hs  TestHelpers.hs
test/Scrabble/: BagTests.hs  BoardTests.hs  GameTests.hs  ScrabbleArbitrary.hs  ScrabbleTests.hs  SearchTests.hs  TileTests.hs
test/Scrabble/Move/: MoveTests.hs  WordPutTests.hs
web/client/: Main.hs
web/wai/: Main.hs
web/wai-server/: ClientMessage.hs  Main.hs  game.js  index.html
