name:                Scrabble
version:             0.1.0.0
synopsis:            A playground for teaching FP with Scrabble.
description:         A playground for teaching FP with Scrabble.
homepage:            https://github.com/joshcough/Scrabble
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: https://github.com/joshcough/Scrabble.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scrabble.Bag
    Scrabble.Board
    Scrabble.Scrabble
    Scrabble.Search
    Scrabble.Types
  other-modules:
  build-depends:
    base >= 4.6 && < 5
   ,containers >= 0.5.6.2
   ,random-shuffle >= 0.0.4
