name:                scrabble
version:             0.1.0.0
synopsis:            A playground for teaching FP with Scrabble.
description:         A playground for teaching FP with Scrabble.
homepage:            https://github.com/joshcough/Scrabble
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type: git
  location: https://github.com/joshcough/Scrabble.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scrabble
    Scrabble.Bag
    Scrabble.Board
    Scrabble.Game
    Scrabble.ListBoard
    Scrabble.Matrix
    Scrabble.Position
    Scrabble.Search
    Scrabble.Types
    Scrabble.Commands.AST
    Scrabble.Commands.Interpreter
    Scrabble.Commands.SExpr
  other-modules:
  build-depends:
    base >= 4.7 && < 5
   ,array
   ,bytestring
   ,containers
   ,parsers
   ,primitive
   ,random-shuffle
   ,semigroups
   ,transformers
   ,trifecta
   ,unordered-containers
   ,utf8-string

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        test/Main.hs
  hs-source-dirs: . test
  other-modules:
    ScrabbleArbitrary
    ScrabbleTests
    SearchTests
    TestHelpers

  if !flag(tests)
    buildable: False
  else
    build-depends:
      base >= 4.7 && < 5
     ,checkers
     ,directory
     ,data-default
     ,filemanip
     ,HUnit
     ,QuickCheck
     ,quickcheck-instances
     ,test-framework
     ,test-framework-hunit
     ,test-framework-quickcheck2
     ,test-framework-th
     ,scrabble
