name:                scrabble
version:             0.1.0.0
synopsis:            A playground for teaching FP with Scrabble.
description:         A playground for teaching FP with Scrabble.
homepage:            https://github.com/joshcough/Scrabble
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type: git
  location: https://github.com/joshcough/Scrabble.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing
  -- default-extensions: OverloadedStrings
  exposed-modules:
    Scrabble
    Scrabble.Bag
    Scrabble.Board
    Scrabble.Commands.AST
    Scrabble.Commands.Interpreter
    Scrabble.Commands.SExpr
    Scrabble.Dictionary
    Scrabble.Game
    Scrabble.Move.Move
    Scrabble.Move.Scoring
    Scrabble.Move.Validation
    Scrabble.Move.WordPut
    Scrabble.NonEmpty
    Scrabble.Position
    Scrabble.ReplHelpers
    Scrabble.Search
    Scrabble.Square
    Scrabble.Tile
  other-modules:
  build-depends:
    base  >= 4.7 && < 5
   ,aeson >= 0.9.0.1
   ,array
   ,bytestring
   ,containers
   ,parsers
   ,primitive
   ,random-shuffle
   ,regex-compat
   ,semigroups
   ,text
   ,transformers
   ,trifecta
   ,unordered-containers
   ,utf8-string
   ,vector

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        test/Main.hs
  hs-source-dirs: . test
  other-modules:
    Scrabble.ScrabbleArbitrary
    Scrabble.BagTests
    Scrabble.BoardTests
    Scrabble.GameTests
    Scrabble.ScrabbleTests
    Scrabble.SearchTests
    Scrabble.TileTests
    TestHelpers

  if !flag(tests)
    buildable: False
  else
    build-depends:
      base  >= 4.7 && < 5
     ,aeson >= 0.9.0.1
     ,checkers
     ,containers
     ,directory
     ,data-default
     ,filemanip
     ,HUnit
     ,QuickCheck
     ,quickcheck-instances
     ,semigroups
     ,test-framework
     ,test-framework-hunit
     ,test-framework-quickcheck2
     ,test-framework-th
     ,scrabble
