name:                Scrabble
version:             0.1.0.0
synopsis:            A playground for teaching FP with Scrabble.
description:         A playground for teaching FP with Scrabble.
homepage:            https://github.com/joshcough/Scrabble
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: https://github.com/joshcough/Scrabble.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scrabble
    Scrabble.Bag
    Scrabble.Board
    Scrabble.Search
    Scrabble.Types
    Scrabble.Commands.AST
    Scrabble.Commands.SExpr
    --Scrabble.Commands.Parser
  other-modules:
  build-depends:
    base >= 4.6 && < 5
   ,bytestring     >= 0.10.4.0
   ,containers     >= 0.5.6.2
   ,parsers        >= 0.12.1.1
   ,random-shuffle >= 0.0.4
   ,semigroups     >= 0.8.3.1   && < 1
   ,trifecta       >= 1.5.1
   ,unordered-containers >= 0.2.5.0
   ,utf8-string    >= 0.3.6 && < 0.4
