name:                scrabble
version:             0.1.0.0
synopsis:            A playground for teaching FP with Scrabble.
description:         A playground for teaching FP with Scrabble.
homepage:            https://github.com/joshcough/Scrabble
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: https://github.com/joshcough/Scrabble.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scrabble
    Scrabble.Bag
    Scrabble.Board
    Scrabble.Game
    Scrabble.Search
    Scrabble.Types
    Scrabble.Commands.AST
    Scrabble.Commands.Interpreter
    Scrabble.Commands.SExpr
    --Scrabble.Commands.Parser
  other-modules:
  build-depends:
    base           >= 4.6           && < 5
   ,array          >= 0.5.0
   ,bytestring     >= 0.10.4.0
   ,containers     >= 0.5.6.2
   ,parsers        >= 0.12.1.1
   ,primitive      >= 0.6
   ,random-shuffle >= 0.0.4
   ,semigroups     >= 0.8.3.1       && < 1
   ,transformers   >= 0.4
   ,trifecta       >= 1.5.1
   ,unordered-containers >= 0.2.5.0
   ,utf8-string    >= 0.3.6         && < 0.4

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        test/Main.hs
  hs-source-dirs: . test
  other-modules:
    ScrabbleTests
    UnitTests.TestHelpers

  if !flag(tests)
    buildable: False
  else
    build-depends:
      base
     ,checkers                   >= 0.4.3
     ,directory                  >= 1.2.0.1
     ,data-default               >= 0.5.3
     ,filemanip                  >= 0.3.6.2
     ,HUnit
     ,QuickCheck                 >= 2.8.1
     ,quickcheck-instances       >= 0.3.11
     ,test-framework             >= 0.6
     ,test-framework-hunit
     ,test-framework-quickcheck2 >= 0.2
     ,test-framework-th          >= 0.2.4
     ,scrabble
